Ubuntu 16.04: Python 2.7, Python 3.5. BDB 5.3. Supported until 2021.
Ubuntu 18.04: Python 2.7, Python 3.6. BDB 5.3. Supported until 2023.
Pkgsrc 19.4.0 has BDB 4.8, 5,3 and 6.2.

TODO: Implement PEP 384 (Stable API)

18.1.0-pre:
  * Support Berkeley DB 18.1.x.
  * Drop support for Berkeley DB 4.7, 5.1 and 6.1.
  * Drop support for Python 2.6, 2.7, 3.3 and 3.4.
  * Since Berkeley DB 4.7 is not supported anymore,
    ancient method "DBEnv.set_rpc_server()" is not available anymore.
  * If you try to install this package on Python 2,
    an appropriate error is raised and directions are provided.
  * Remove dead code for unsupported Python releases.
  * Remove dead code for unsupported Berkeley DB releases.
  * *WARNING:* Now *ALL* keys and values must be bytes (or ints when
    appropriate). Previous releases did mostly transparent encoding. This
    is not the case anymore. All needed encoding must be explicit in
    your code, both when reading and when writing to the database.
  * In previous releases, database cursors were iterable under Python 3,
    but not under Python 2. For this release, database cursors are not
    iterable anymore. This will be improved in a future release.
  * In previous releases, log cursors were iterable under Python 3,
    but not under Python 2. For this release, log cursors are not
    iterable anymore. This will be improved in a future release.
  * Support for DB_REPMGR_CONF_DISABLE_SSL flag in
    "DB_ENV.rep_set_config()".
  * *WARNING:* In Berkeley DB 18.1 and up, Replication Manager uses SSL by
    default.

    This configuration is currently unsupported.

    If you use Berkeley DB 18.1 and up and Replication Manager, you *MUST*
    configure the DB environment to not use SSL. You must do

        DB_ENV.rep_set_config(db.DB_REPMGR_CONF_DISABLE_SSL, 1)

    in your code.

    This limitation will be overcomed in a future release of this project.

  * "open()" methods allow path-like objects.